--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@vimeo/player": "^2.17.1",
     "aos": "^3.0.0-beta.6",
     "lodash.throttle": "^4.1.1",
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "swiper": "^8.4.2"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
